# WildBridge

./: .gitignore  LICENSE  README.md
GroundStation/: djiInterfaceLite.py
GroundStation/Python/: djiInterface.py
GroundStation/ROS/: requirements.txt
GroundStation/ROS/dji_controller/: package.xml  setup.cfg  setup.py
GroundStation/ROS/dji_controller/dji_controller/: controller.py
GroundStation/ROS/dji_controller/dji_controller/submodules/: dji_interface.py
GroundStation/ROS/drone_videofeed/: package.xml  setup.cfg  setup.py
GroundStation/ROS/drone_videofeed/drone_videofeed/: rtsp.py
GroundStation/ROS/wildview_bringup/: CMakeLists.txt  package.xml
GroundStation/ROS/wildview_bringup/launch/: swarm_connection.launch.py
SampleCode-V5/android-sdk-v5-sample/module-common/: build.gradle
SampleCode-V5/android-sdk-v5-sample/module-common/src/main/res/values/: styles.xml
SampleCode-V5/android-sdk-v5-sample/src/main/res/layout/: frag_trajectory_recording_page.xml  frag_virtual_stick_page.xml  fragment_formation_control.xml
WildBridgeApp/android-sdk-v5-as/: VirtualStickFragment.kt  gradle.properties
WildBridgeApp/android-sdk-v5-sample/: build.gradle
WildBridgeApp/android-sdk-v5-sample/app-aircraft/: build.gradle
WildBridgeApp/android-sdk-v5-sample/module-aircraft/: build.gradle
WildBridgeApp/android-sdk-v5-sample/module-aircraft/src/main/res/layout/: frag_virtual_stick_page.xml
WildBridgeApp/android-sdk-v5-sample/module-common/src/main/res/values/: strings.xml
WildBridgeApp/android-sdk-v5-sample/src/main/res/values/: strings.xml
(+19 files in other folders)
