<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wildview_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="65714311+edouardrolland@users.noreply.github.com">edr</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>dji_controller</exec_depend>
  <exec_depend>drone_videofeed</exec_depend>
  <exec_depend>groundstation</exec_depend>
  <exec_depend>animal_localisation</exec_depend>
  <exec_depend>pso_controller</exec_depend>
  <exec_depend>mission_control</exec_depend>
  <exec_depend>path_planning</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
